# webDevProject

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  alembic.ini  pyproject.toml  render.yaml  requirements-dashboard.txt  requirements-light.txt  requirements.txt  run.bat
bot/src/: bot.py
bot/src/cogs/: admin.py  analytics.py  artists.py  feeds.py  help.py  premium.py
bot/src/core/: client.py
bot/src/services/: feed_poller.py  image_service.py  notifier.py  premium_service.py  scraper.py
bot/src/utils/: paginator.py  rate_limit.py
dashboard/src/: main.py
dashboard/src/auth/: discord_oauth.py  session.py
dashboard/src/routers/: analytics.py  artists.py  auth.py  feeds.py  guilds.py  health.py  premium.py  webhook.py
dashboard/src/static/: index.html
docs/: API.md  CONFIG.md  DEPLOYMENT.md  INSTALL.md  README.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
prefix_hub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/: config.py  logging_config.py
shared/db/: models.py  session.py
shared/db/repositories/: artist_repo.py  base.py  feed_repo.py  guild_repo.py  user_repo.py
