[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefix-hub"
version = "2.0.0"
description = "Production-ready Discord bot platform for leaked.cx music notifications"
requires-python = ">=3.12"
dependencies = [
    # Discord
    "discord.py==2.3.2",
    # Web / API
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",
    # Auth
    "PyJWT==2.8.0",
    # Database
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    # HTTP client
    "aiohttp==3.9.5",
    # Feed parsing
    "feedparser==6.0.11",
    # HTML parsing
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    # Config / validation
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "python-dotenv==1.0.1",
    # Static files
    "aiofiles==23.2.1",
    # Stripe (optional – payments)
    "stripe==9.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.14.0",
    "httpx==0.27.0",        # async test client for FastAPI
    "aiosqlite==0.20.0",    # in-memory DB for integration tests
    "ruff==0.4.4",          # linter + formatter
    "mypy==1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "bot*", "dashboard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
